[package]
authors = ["Marlon <marlon@multipedidos.com.br>"]
edition = "2021"
name    = "node-printer-rust"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
marlon-printers = "2.0.0"
napi        = "2"
napi-derive = "2"
printers = "2.0.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
